Reduce dependencies.